<resources>
    <string name="app_name">三省</string>
    <string name="app_name_en">Study</string>
    <string name="label_slogan_app">好好学习 天天向上</string>
    <!--贝舍尔曲线-->
    <string name="title_subject_bezier_app">贝舍尔曲线</string>
    <string name="label_quad_bezier_app">二阶</string>
    <string name="label_quad_bezier_manual_app">定点二阶</string>
    <string name="label_start_point_bezier">起始点</string>
    <string name="label_end_point_bezier">结束点</string>
    <string name="label_ctrl_point_bezier">控制点</string>
    <string name="title_axis_x_bezier">时间点(x-axis)</string>
    <string name="label_axis_y_bezier">音量(y-axis)</string>
    <!--ProtocolBuffer-->
    <string name="title_subject_protobuf_app">ProtoBuff</string>
    <string name="label_entry_level_protobuf_app">入门</string>
    <string name="label_advanced_protobuf_app">进阶</string>
    <string name="label_high_level_protobuf_app">高级</string>
    <string name="label_string_protobuf">普通字符串</string>
    <string name="label_json_protobuf">JSON 字符串</string>
    <string name="label_entity_protobuf">字符反转</string>
    <!--IPC-->
    <string name="title_subject_ipc_app">IPC</string>
    <string name="label_wifi_p2p_app">WiFi-P2P</string>
    <string name="label_messenger_app">Messenger</string>
    <string name="label_search_ipc">扫描</string>
    <string name="label_stop_ipc">停止</string>
    <string name="label_searching_ipc">扫描中…</string>
    <string name="label_connect_ipc">连接</string>
    <string name="label_disconnect_ipc">断开连接</string>
    <string name="label_send_ipc">发送数据</string>
    <string name="label_edit_process_messenger">修改服务进程</string>
    <string name="label_livebus_messenger">LiveEventBus</string>
    <string name="fmt_send_ipc">发送状态:%s</string>
    <string name="fmt_receive_ipc">接收状态:%s</string>
    <string name="label_bluetooth_printer_app">蓝牙打印机</string>
    <string name="label_open_app">打开</string>
    <string name="label_close_app">关闭</string>
    <string name="label_clear_app">清除</string>
    <string name="label_print_app">打印</string>
    <string name="label_print_bitmap_app">打印图片</string>
    <string name="label_print_barcode_app">打印条码</string>
    <string name="label_print_qrcode_app">二维码</string>
    <string name="label_print_order_app">打印订单</string>
    <string name="label_print_table_app">打印列表</string>
    <string name="label_show_table_app">显示列表</string>
    <string name="label_orientation_app">旋转屏幕</string>
    <string name="label_print_view_app">打印控件</string>
    <!--Arch-->
    <string name="title_subject_arch_app">Arch</string>
    <string name="label_room_arch">Room</string>
    <string name="label_work_manager_arch">WorkManager</string>
    <string name="label_paging_arch">Paging</string>
    <string name="label_coroutines_arch">协程</string>
    <string name="label_rxjava_arch">RxJava</string>
    <string name="label_hello_coroutines_arch">Hello.协程</string>
    <string name="label_hi_coroutines_arch">Hi.协程</string>
    <!--自定义View-->
    <string name="title_subject_custom_view">自定义View</string>
    <string name="label_behavior_app">Behavior</string>
    <string name="title_test_center_app">测试中心</string>
    <string name="label_touch_app">TouchEvent</string>
    <string name="label_recyclerview_app">RecyclerView</string>
    <string name="label_vp2">ViewPager2</string>
    <!--APM-->
    <string name="title_apm">APM</string>
    <string name="label_anr">ANR</string>

</resources>
